fix z-index bug app__social

--- a/src/App.scss
+++ b/src/App.scss
@@ -105,7 +105,7 @@
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
-
+  z-index: 100;
   padding: 1rem;
 
   a {
